--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          своими руками в условиях домашней мастерской, но, конечно, для этого надо знать, как просверлить стекло, какие
          использовать инструменты, расходные материалы и оборудование.</p>
 
-      <img src="/img/01.jpg" alt="отверстие">
+      <img src="img/01.jpg" alt="отверстие">
 
       <div> Чтобы просверлить стекло, воспользуйтесь одним из способов, рассматриваемых в данной статье</div>
 
