--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
    <meta charset="UTF-8">
@@ -38,7 +38,7 @@
       <div> Чтобы просверлить стекло, воспользуйтесь одним из способов, рассматриваемых в данной статье</div>
 
       <h2 id="1">Разбираемся в особенностях материала</h2>
-      <div>
+     
          <p>
             Прежде чем задаваться вопросом о том, как просверлить стекло в домашних условиях, следует хотя бы в общих
             чертах познакомиться с характеристиками и особенностями этого материала.
@@ -60,7 +60,7 @@
             <li>сульфидные;</li>
             <li>фторидного типа.</li>
          </ul>
-         </p>
+         
 
          <h2 id="2">Какие инструменты используют для сверления стекла</h2>
          <p>Чтобы сверление стекла не закончилось его растрескиванием и полным разрушением, очень важно знать не только
@@ -115,8 +115,7 @@
             <li>Дрелью нельзя покачивать из стороны в сторону.</li>
             <li>Расстояние центра отверстия от края обрабатываемого изделия должно составлять не менее 1,5 см.</li>
          </ol>
-
-   </main>
+         </main>
    <footer>
       <span>Все о металле на одном сайте
          Использование материалов сайта возможно только при указании полной активной ссылки на источник.</span>
